--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+Version 1.0.3 (25.11.2010)
+--------------------------
+- Fixed changlog display (thanks Michael Schneider)
+
 Version 1.0.2 (18.03.2010)
 --------------------------
 - Added automatic update and exit feature
